# resident_sample

./: Cargo.toml  docker-compose.yaml
db/sql/: 01_data.sql
db/sql/stored/: resident_set_delete_worker.sql  resident_set_update_batch.sql
db/sql/table/: 01_batches.sql  02_workers.sql
src/: db.rs  looper.rs  main.rs
