[package]
name = "resident"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
cron = "0.12"
deadpool-postgres = { version = "0.12.1" }
postgres-types = { version = "0.2.4", features = [
    "derive",
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
url = "2.5.0"
